refactor: 交易计划与仓位绑定重做
- 绑定规则全部收进 TraderPlanStore：upsert 拆成 open/cover，rebind 换成 reconcile 出事件（Closed/Filled/Cancelled）
- 一行计划对应一个仓位生命期：旧仓了结归档，同键还有新仓或挂单的续立新行，间隙里连开连平的各补一行
- 仓位被止损而同键加仓单还挂着时当轮就报结局，不再等挂单成交
- close_position 先查仓位再下单，留痕统一按币向找计划
- TradeGuard 拒掉会当场成交的限价单；账户状态里持仓/挂单时长按 sim 自己的时刻算

Co-Authored-By: Claude <noreply@anthropic.com>